[package]
name = "catalyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "catalyst"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config= "0.11"
chrono = "0.4.15"
env_logger="0.9"
log="0.4"
serde_json = "1.0"
datafusion = "26"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }

[profile.profiling]
inherits = "release"
debug = true